--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,8 @@
             },
             "windows": {
                 "command": "${input:isaac_path}/python.bat ${workspaceFolder}/.vscode/tools/setup_vscode.py --isaac_path ${input:isaac_path}"
-            }
+            },
+            "problemMatcher": []
         }
     ],
     "inputs": [
